Fix homepage place list flexbox alignment

--- a/app/assets/stylesheets/3_Pages/p-home.scss
+++ b/app/assets/stylesheets/3_Pages/p-home.scss
@@ -94,7 +94,7 @@
   .places-list.home-list {
     flex-wrap: wrap;
     width: auto;
-
+    justify-content: space-between;
     // .place {
     //   flex-basis: 23%;
     //   max-width: 23%;
